update to working version

--- a/pl_szkielet_01_win.vcxproj.filters
+++ b/pl_szkielet_01_win.vcxproj.filters
@@ -38,18 +38,12 @@
     <ClCompile Include="shaderprogram.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="mesh.cpp">
-      <Filter>Pliki źródłowe</Filter>
-    </ClCompile>
-    <ClCompile Include="model.cpp">
-      <Filter>Pliki źródłowe</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="f_simplest.glsl">
+    <None Include="fragment_shader.glsl">
       <Filter>Pliki zasobów</Filter>
     </None>
-    <None Include="v_simplest.glsl">
+    <None Include="vertex_shader.glsl">
       <Filter>Pliki zasobów</Filter>
     </None>
   </ItemGroup>
